--- a/HoroCrew-WebApp/src/views/misc/Home/Home.css
+++ b/HoroCrew-WebApp/src/views/misc/Home/Home.css
@@ -1,7 +1,7 @@
 .allContainer-Home {
     background-image: url("../../../assets/images/Backgrounds/color.jpeg");
     background-size: cover;
-    min-width: 350px;
-    min-height: 667px;
-    margin-left: 0;
+    min-width: 100vw;
+    min-height: 100vh;
+    margin: 0;
 }
