--- a/HoroCrew-WebApp/src/views/misc/Home/Home.css
+++ b/HoroCrew-WebApp/src/views/misc/Home/Home.css
@@ -1,7 +1,18 @@
-.allContainer-Home {
+/*.allContainer-Home {
     background-image: url("../../../assets/images/Backgrounds/color.jpeg");
     background-size: cover;
     min-width: 100vw;
     min-height: 100vh;
     margin: 0;
+}*/
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.section-3 {
+    background-color: aqua;
+    color: blue;
+    height: 100%;
 }
